--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.google.firebase:firebase-core:15.0.2'
     compile 'com.google.firebase:firebase-auth:15.1.0'
     compile 'com.google.firebase:firebase-database:15.0.0'
     compile 'com.google.firebase:firebase-storage:15.0.2'
@@ -29,5 +31,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    compile 'com.lorentzos.swipecards:library:1.0.9'
 }
 apply plugin: 'com.google.gms.google-services'
