--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,9 +23,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     compile 'com.android.support:cardview-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
     compile 'com.google.firebase:firebase-core:15.0.2'
     compile 'com.google.firebase:firebase-auth:15.1.0'
     compile 'com.google.firebase:firebase-database:15.0.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.firebase:firebase-storage:15.0.2'
     compile 'com.google.firebase:firebase-crash:15.0.2'
     testImplementation 'junit:junit:4.12'
